--- a/index.html
+++ b/index.html
@@ -5,52 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашние задания</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            text-align: center;
-            background-color: #747474;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        .task-grid {
-            gap: 20px;
-            width: 100%;
-            margin-top: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .task-card {
-            width: 75%;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: transform 0.2s ease;
-
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .task-card:hover {
-            transform: scale(1.05);
-        }
-
-        /* .task-card a {
-
-        } */
-    </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
