--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </a>
 
         <a class="task-card" href="tasks/task_4.html">Задание 4
-            <br>
+            <br>Эмуляция игральной кости
         </a>
 
         <a class="task-card" href="tasks/task_5.html">Задание 5
-            <br>
+            <br>Создание формы регистрации
         </a>
 
         <a class="task-card" href="tasks/task_6.html">Задание 6
