Add Guess the number

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
 
         <a class="task-card" href="tasks/task_6.html">Задание 6
-            <br>
+            <br>Создание игры "Угадай число"
         </a>
 
         <a class="task-card" href="tasks/task_7.html">Задание 7
