add Rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a>
 
         <a class="task-card" href="tasks/task_7.html">Задание 7
-            <br>
+            <br>Создание игры "Камень, ножницы, бумага"
         </a>
 
         <a class="task-card" href="tasks/task_8.html">Задание 8
